--- a/qrder-customer/src/app/menutab/tab1.page.html
+++ b/qrder-customer/src/app/menutab/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Menu items
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -12,6 +12,18 @@
       <ion-title size="large">Tab 1</ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-list *ngFor="let item of data">
+    <ion-item>
+      <ion-thumbnail slot="start">
+        <img src="{{item.imagePath}}"/>
+      </ion-thumbnail>
+      <ion-label>{{item.name}}</ion-label>
+      <!-- add List that goes through the submenu and toogles -->
+      <ion-list *ngFor="let subitem of item.items">
+        <ion-item>
+          <ion-label>"{{subitem.name}} for {{subitem.price}}€"</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-item>
+  </ion-list>
 </ion-content>
