--- a/qrder-customer/src/app/tabs/tabs.page.html
+++ b/qrder-customer/src/app/tabs/tabs.page.html
@@ -1,12 +1,12 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
+    <ion-tab-button tab="menutab">
       <ion-icon name="menu"></ion-icon>
       <ion-label>Menu</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
+    <ion-tab-button tab="carttab">
       <ion-icon name="cart"></ion-icon>
       <ion-label>Shopping cart</ion-label>
     </ion-tab-button>
