--- a/qrder-customer/src/app/menutab/tab1.page.html
+++ b/qrder-customer/src/app/menutab/tab1.page.html
@@ -13,17 +13,23 @@
     </ion-toolbar>
   </ion-header>
   <ion-list *ngFor="let item of data">
-    <ion-item>
-      <ion-thumbnail slot="start">
-        <img src="{{item.imagePath}}"/>
-      </ion-thumbnail>
+
+    <ion-item (click)="toggleItem(item)">
+      <ion-thumbnail slot="start"><img src="{{item.imagePath}}"/></ion-thumbnail>
       <ion-label>{{item.name}}</ion-label>
-      <!-- add List that goes through the submenu and toogles -->
-      <ion-list *ngFor="let subitem of item.items">
-        <ion-item>
-          <ion-label>"{{subitem.name}} for {{subitem.price}}€"</ion-label>
-        </ion-item>
-      </ion-list>
+      <ion-icon *ngIf="!item.visible" name="caret-down-outline"></ion-icon>
+      <ion-icon *ngIf="item.visible" name="caret-up-outline"></ion-icon>
     </ion-item>
+
+    <!-- add List that goes through the submenu and toogles -->
+    <ion-list *ngFor="let subitem of item.items">
+
+      <ion-item *ngIf="item.visible" (click)="subitemPicked(subitem)"> <!-- Hides and shows items when category is clicked -->
+        <ion-label>{{subitem.name}}</ion-label>
+        <ion-label>{{subitem.price}}€</ion-label>
+        <ion-icon name="add-circle-outline"></ion-icon>
+      </ion-item>
+
+    </ion-list>
   </ion-list>
 </ion-content>
