Add total price item

--- a/qrder-customer/src/app/carttab/tab2.page.html
+++ b/qrder-customer/src/app/carttab/tab2.page.html
@@ -67,5 +67,10 @@
       <span>€4,00</span>
     </ion-item>
 
+    <ion-item lines="none">
+      <ion-note slot="start"><b>2</b></ion-note>
+      <ion-label><b>Total</b></ion-label>
+      <b>€4,00</b>
+    </ion-item>
   </ion-list>
 </ion-content>
