Set qr code color based on theme

--- a/qrder-customer/src/app/carttab/tab2.page.html
+++ b/qrder-customer/src/app/carttab/tab2.page.html
@@ -23,7 +23,7 @@
 
   <ion-row class="ion-justify-content-center">
     <qrcode [qrdata]="qrData" [width]="256" [errorCorrectionLevel]="'M'" [colorLight]="'#00000000'"
-            [colorDark]="'#ffffff'"></qrcode>
+            [colorDark]="qrColor"></qrcode>
   </ion-row>
 
   <!-- List Header Full Lines -->
