ADD presentable version of the first tab

--- a/qrder-customer/src/app/tabs/tabs.page.html
+++ b/qrder-customer/src/app/tabs/tabs.page.html
@@ -7,7 +7,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="carttab">
-      <ion-badge *ngIf="itemCount > 0" color="primary">{{itemCount}}</ion-badge>
+      <ion-badge *ngIf="itemCount > 0" color="danger">{{itemCount}}</ion-badge>
       <ion-icon name="cart"></ion-icon>
       <ion-label>Shopping cart</ion-label>
     </ion-tab-button>
