--- a/qrder-customer/src/app/menutab/tab1.page.html
+++ b/qrder-customer/src/app/menutab/tab1.page.html
@@ -9,27 +9,35 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large">Menu</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-list *ngFor="let item of data">
 
     <ion-item (click)="toggleItem(item)">
-      <ion-thumbnail slot="start"><img src="{{item.imagePath}}"/></ion-thumbnail>
-      <ion-label>{{item.name}}</ion-label>
+      <ion-icon class="icon_subitem" name="{{item.imagePath}}"></ion-icon>
+      <!-- <ion-thumbnail slot="start"><img src="{{item.imagePath}}"/></ion-thumbnail> -->
+      <ion-label class="label_category">{{item.name}}</ion-label>
       <ion-icon *ngIf="!item.visible" name="caret-down-outline"></ion-icon>
       <ion-icon *ngIf="item.visible" name="caret-up-outline"></ion-icon>
     </ion-item>
 
     <!-- add List that goes through the submenu and toogles -->
-    <ion-list *ngFor="let subitem of item.items">
+    <div class="ion-margin-start" *ngIf="item.visible">
 
-      <ion-item *ngIf="item.visible" (click)="subitemPicked(subitem)"> <!-- Hides and shows items when category is clicked -->
-        <ion-label>{{subitem.name}}</ion-label>
-        <ion-label>{{subitem.price}}€</ion-label>
-        <ion-icon name="add-circle-outline"></ion-icon>
-      </ion-item>
+      <ion-list *ngFor="let subitem of item.items">
+        <ion-item (click)="subitemPicked(subitem)"> <!-- Hides and shows items when category is clicked -->
+          <ion-label class="subitem_price">€ {{formatNicely(subitem.price)}}</ion-label>
 
-    </ion-list>
+          <div class="subitem_name">
+            <ion-label>{{subitem.name}}
+              <ion-note>({{formatNicely(subitem.amount)}}l)</ion-note>
+            </ion-label>
+          </div>
+          <ion-icon slot="end" class="md" name="add-circle" color="success"></ion-icon>
+        </ion-item>
+      </ion-list>
+
+    </div>
   </ion-list>
 </ion-content>
