--- a/qrder-customer/src/app/menutab/tab1.page.html
+++ b/qrder-customer/src/app/menutab/tab1.page.html
@@ -34,7 +34,11 @@
               <ion-note>({{formatNicely(subitem.amount)}}l)</ion-note>
             </ion-label>
           </div>
+          <div>
+            <ion-badge *ngIf="subitem.amountInCart > 0">{{subitem.amountInCart}}</ion-badge>
+          </div>
           <ion-icon slot="end" class="md" name="add-circle" color="success"></ion-icon>
+
         </ion-item>
       </ion-list>
 
