--- a/qrder-customer/src/app/menutab/tab1.page.html
+++ b/qrder-customer/src/app/menutab/tab1.page.html
@@ -27,18 +27,16 @@
 
       <ion-list *ngFor="let subitem of item.items">
         <ion-item (click)="subitemPicked(subitem)"> <!-- Hides and shows items when category is clicked -->
-          <ion-label class="subitem_price">€ {{formatNicely(subitem.price)}}</ion-label>
+          <ion-col size="3">
+            <ion-label class="subitem_price">€ {{formatNicely(subitem.price)}}</ion-label>
+          </ion-col>
 
-          <div class="subitem_name">
-            <ion-label>{{subitem.name}}
-              <ion-note>({{formatNicely(subitem.amount)}}l)</ion-note>
-            </ion-label>
-          </div>
-          <div>
-            <ion-badge *ngIf="subitem.amountInCart > 0">{{subitem.amountInCart}}</ion-badge>
-          </div>
+          <ion-label  class="ion-no-margin">{{subitem.name}}
+            <ion-note>({{formatNicely(subitem.amount)}}l)</ion-note>
+          </ion-label>
+
+          <ion-badge *ngIf="subitem.amountInCart > 0">{{subitem.amountInCart}}</ion-badge>
           <ion-icon slot="end" class="md" name="add-circle" color="success"></ion-icon>
-
         </ion-item>
       </ion-list>
 
