Add text wrap to shopping cart

--- a/qrder-customer/src/app/carttab/tab2.page.html
+++ b/qrder-customer/src/app/carttab/tab2.page.html
@@ -34,27 +34,27 @@
   <ion-list >
     <ion-item>
       <ion-text slot="start">2</ion-text>
-      <ion-label >Red Bull <ion-text color="medium">(€3,50)</ion-text></ion-label>
+      <ion-label class="ion-text-wrap">Red Bull <ion-text color="medium">(€3,50)</ion-text></ion-label>
       <span>€7,00</span>
     </ion-item>
     <ion-item>
       <ion-text slot="start">6</ion-text>
-      <ion-label >Freistädter <ion-text color="medium">(€3,80)</ion-text></ion-label>
+      <ion-label class="ion-text-wrap">Freistädter <ion-text color="medium">(€3,80)</ion-text></ion-label>
       <span>€22,80</span>
     </ion-item>
     <ion-item>
       <ion-text slot="start">1</ion-text>
-      <ion-label >Wieselburger <ion-text color="medium">(€3,90)</ion-text></ion-label>
+      <ion-label class="ion-text-wrap">Wieselburger <ion-text color="medium">(€3,90)</ion-text></ion-label>
       <span>€3,90</span>
     </ion-item>
     <ion-item>
       <ion-text slot="start">4</ion-text>
-      <ion-label >Welschriesling <ion-text color="medium">(€2,50)</ion-text></ion-label>
+      <ion-label class="ion-text-wrap">Welschriesling <ion-text color="medium">(€2,50)</ion-text></ion-label>
       <span>€10,00</span>
     </ion-item>
     <ion-item lines="full">
       <ion-text slot="start">2</ion-text>
-      <ion-label >Sauvignon Blanc <ion-text color="medium">(€2,70)</ion-text></ion-label>
+      <ion-label class="ion-text-wrap">Sauvignon Blanc <ion-text color="medium">(€2,70)</ion-text></ion-label>
       <span>€5,40</span>
     </ion-item>
 
