ADD favourites category and new menu items

--- a/qrder-customer/src/app/menutab/tab1.page.scss
+++ b/qrder-customer/src/app/menutab/tab1.page.scss
@@ -11,3 +11,15 @@
 .subitem_price {
   width: 100px;
 }
+
+#favItem {
+  font-size: 18px;
+}
+
+#favIcon {
+  font-size: 48px;
+}
+
+#menuItem {
+  font-size: medium;
+}
