--- a/qrder-customer/src/app/menutab/tab1.page.html
+++ b/qrder-customer/src/app/menutab/tab1.page.html
@@ -12,11 +12,37 @@
       <ion-title size="large">Menu</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-list *ngFor="let favCat of favouritesCategories">
+
+    <ion-item (click)="toggleItem(favCat)">
+      <ion-icon class="icon_subitem" name="{{favCat.imagePath}}"></ion-icon>
+      <ion-label class="label_category">{{favCat.name}}</ion-label>
+      <ion-icon *ngIf="!favCat.visible" name="caret-down-outline"></ion-icon>
+      <ion-icon *ngIf="favCat.visible" name="caret-up-outline"></ion-icon>
+    </ion-item>
+
+    <!-- add List that goes through the submenu and toogles -->
+    <div class="ion-margin-start" *ngIf="favCat.visible">
+
+      <ion-list *ngFor="let subitem of favCat.items">
+        <ion-item (click)="subitemPicked(subitem)"> <!-- Hides and shows items when category is clicked -->
+          <ion-label id="favItem" class="ion-text-wrap">{{subitem.name}}
+            <ion-note>({{formatNicely(subitem.amount)}}l)</ion-note>
+          </ion-label>
+
+          <ion-badge *ngIf="subitem.amountInCart > 0">{{subitem.amountInCart}}</ion-badge>
+          <ion-icon id="favIcon" slot="end" class="md" name="add-circle" color="success"></ion-icon>
+        </ion-item>
+      </ion-list>
+
+    </div>
+  </ion-list>
+
   <ion-list *ngFor="let item of data">
 
     <ion-item (click)="toggleItem(item)">
       <ion-icon class="icon_subitem" name="{{item.imagePath}}"></ion-icon>
-      <!-- <ion-thumbnail slot="start"><img src="{{item.imagePath}}"/></ion-thumbnail> -->
       <ion-label class="label_category">{{item.name}}</ion-label>
       <ion-icon *ngIf="!item.visible" name="caret-down-outline"></ion-icon>
       <ion-icon *ngIf="item.visible" name="caret-up-outline"></ion-icon>
@@ -31,7 +57,7 @@
             <ion-label class="subitem_price">€ {{formatNicely(subitem.price)}}</ion-label>
           </ion-col>
 
-          <ion-label  class="ion-no-margin">{{subitem.name}}
+          <ion-label id="menuItem" class="ion-text-wrap">{{subitem.name}}
             <ion-note>({{formatNicely(subitem.amount)}}l)</ion-note>
           </ion-label>
 
