--- a/qrder-customer/src/app/menutab/tab1.page.html
+++ b/qrder-customer/src/app/menutab/tab1.page.html
@@ -31,7 +31,7 @@
             <ion-note>({{formatNicely(subitem.amount)}}l)</ion-note>
           </ion-label>
 
-          <ion-badge style="font-size: large" *ngIf="subitem.amountInCart > 0">{{subitem.amountInCart}}</ion-badge>
+          <ion-badge *ngIf="subitem.amountInCart > 0">{{subitem.amountInCart}}</ion-badge>
           <ion-icon id="favIcon" slot="end" class="md" name="add-circle" color="success"></ion-icon>
         </ion-item>
       </ion-list>
