Added logic to shopping cart

--- a/qrder-customer/src/app/menutab/tab1.page.html
+++ b/qrder-customer/src/app/menutab/tab1.page.html
@@ -28,7 +28,7 @@
       <ion-list *ngFor="let subitem of favCat.items">
         <ion-item (click)="subitemPicked(subitem)"> <!-- Hides and shows items when category is clicked -->
           <ion-label id="favItem" class="ion-text-wrap">{{subitem.name}}
-            <ion-note>({{formatNicely(subitem.amount)}}l)</ion-note>
+            <ion-note>({{app.formatNicely(subitem.amount)}}l)</ion-note>
           </ion-label>
 
           <ion-badge *ngIf="subitem.amountInCart > 0">{{subitem.amountInCart}}</ion-badge>
@@ -54,11 +54,11 @@
       <ion-list *ngFor="let subitem of item.items">
         <ion-item (click)="subitemPicked(subitem)"> <!-- Hides and shows items when category is clicked -->
           <ion-col size="3">
-            <ion-label class="subitem_price">€ {{formatNicely(subitem.price)}}</ion-label>
+            <ion-label class="subitem_price">€ {{app.formatNicely(subitem.price)}}</ion-label>
           </ion-col>
 
           <ion-label id="menuItem" class="ion-text-wrap">{{subitem.name}}
-            <ion-note>({{formatNicely(subitem.amount)}}l)</ion-note>
+            <ion-note>({{app.formatNicely(subitem.amount)}}l)</ion-note>
           </ion-label>
 
           <ion-badge *ngIf="subitem.amountInCart > 0">{{subitem.amountInCart}}</ion-badge>
