--- a/qrder-customer/src/app/carttab/tab2.page.html
+++ b/qrder-customer/src/app/carttab/tab2.page.html
@@ -13,8 +13,9 @@
     </ion-toolbar>
   </ion-header>
 
+
   <!-- User has no Orders -->
-  <ng-template [ngIf]="true">
+  <ng-template [ngIf]="cart.isEmpty()">
     <ion-text class="ion-text-center just">
       <h2>Your cart is empty️</h2>
       <div class="ion-justify-content-center">
@@ -26,7 +27,7 @@
   </ng-template>
 
   <!-- User has Orders -->
-  <ng-template [ngIf]="false">
+  <ng-template [ngIf]="!cart.isEmpty()">
     <ion-item lines="full">
       <ion-icon name="information-circle-outline" class="ion-margin-end" color="primary"></ion-icon>
       <ion-label class="ion-text-wrap" color="medium">
@@ -47,38 +48,17 @@
       <ion-button (click)="presentClearAlert()">Clear<ion-icon style="font-size: large; margin-left: 5px;" name="trash-outline"></ion-icon></ion-button>
     </ion-list-header>
 
-    <ion-list >
-      <ion-item>
-        <ion-text slot="start">2</ion-text>
-        <ion-label class="ion-text-wrap">Red Bull <ion-text color="medium">(€3,50)</ion-text></ion-label>
-        <span>€7,00</span>
-      </ion-item>
-      <ion-item>
-        <ion-text slot="start">6</ion-text>
-        <ion-label class="ion-text-wrap">Freistädter <ion-text color="medium">(€3,80)</ion-text></ion-label>
-        <span>€22,80</span>
-      </ion-item>
-      <ion-item>
-        <ion-text slot="start">1</ion-text>
-        <ion-label class="ion-text-wrap">Wieselburger <ion-text color="medium">(€3,90)</ion-text></ion-label>
-        <span>€3,90</span>
-      </ion-item>
-      <ion-item>
-        <ion-text slot="start">4</ion-text>
-        <ion-label class="ion-text-wrap">Welschriesling <ion-text color="medium">(€2,50)</ion-text></ion-label>
-        <span>€10,00</span>
-      </ion-item>
-      <ion-item lines="full">
-        <ion-text slot="start">2</ion-text>
-        <ion-label class="ion-text-wrap">Sauvignon Blanc <ion-text color="medium">(€2,70)</ion-text></ion-label>
-        <span>€5,40</span>
-      </ion-item>
-
-      <ion-item lines="full">
-        <ion-text slot="start"><b>15</b></ion-text>
-        <ion-label><b>Total</b></ion-label>
-        <b>€41,60</b>
+    <ion-list *ngFor="let order of cart.items; let first=first">
+      <ion-item >
+        <ion-text slot="start">{{order.amountInCart}}</ion-text>
+        <ion-label class="ion-text-wrap">{{order.name}} <ion-text color="medium">({{app.formatNicely(order.amount)}}l)</ion-text></ion-label>
+        <span>€{{app.formatNicely(order.totalPrice())}}</span>
       </ion-item>
     </ion-list>
+    <ion-item lines="full">
+      <ion-text slot="start"><b>{{cart.totalAmountOfItemsInCart()}}</b></ion-text>
+      <ion-label><b>Total</b></ion-label>
+      <b>€{{app.formatNicely(cart.totalPrice())}}</b>
+    </ion-item>
   </ng-template>
 </ion-content>
