--- a/qrder-customer/src/app/tabs/tabs.page.html
+++ b/qrder-customer/src/app/tabs/tabs.page.html
@@ -7,10 +7,9 @@
     </ion-tab-button>
 
     <ion-tab-button tab="carttab">
-      <ion-badge *ngIf="itemCount > 0" color="danger">{{itemCount}}</ion-badge>
+      <ion-badge *ngIf="!cart.isEmpty()" color="danger">{{cart.totalAmountOfItemsInCart()}}</ion-badge>
       <ion-icon name="cart"></ion-icon>
       <ion-label>Shopping cart</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
-
 </ion-tabs>
