Add searchbar and implement basic search functionality

--- a/qrder-customer/src/app/menutab/tab1.page.html
+++ b/qrder-customer/src/app/menutab/tab1.page.html
@@ -13,6 +13,8 @@
     </ion-toolbar>
   </ion-header>
 
+  <ion-searchbar showCancelButton="focus" placeholder="Search for an item" (ionChange)="filterItems($event)" (ionCancel)="clearSearch()"></ion-searchbar>
+
   <ion-list *ngFor="let favCat of getFavourites()">
 
     <ion-item (click)="toggleItem(favCat)">
