--- a/qrder-customer/src/app/menutab/tab1.page.html
+++ b/qrder-customer/src/app/menutab/tab1.page.html
@@ -34,7 +34,7 @@
             <ion-note>({{app.formatNicely(subitem.amount)}}l)</ion-note>
           </ion-label>
 
-          <ion-badge *ngIf="subitem.amountInCart > 0">{{subitem.amountInCart}}</ion-badge>
+          <ion-badge class="badge" *ngIf="subitem.amountInCart > 0">{{subitem.amountInCart}}</ion-badge>
           <ion-icon id="favIcon" slot="end" class="md" name="add-circle" color="success"></ion-icon>
         </ion-item>
       </ion-list>
@@ -65,7 +65,7 @@
             <ion-note>({{app.formatNicely(subitem.amount)}}l)</ion-note>
           </ion-label>
 
-          <ion-badge *ngIf="subitem.amountInCart > 0">{{subitem.amountInCart}}</ion-badge>
+          <ion-badge class="badge" *ngIf="subitem.amountInCart > 0">{{subitem.amountInCart}}</ion-badge>
           <ion-icon slot="end" class="md" name="add-circle" color="success"></ion-icon>
         </ion-item>
       </ion-list>
